# Geobit

./: .dockerignore  .env.example  .markdownlint.jsonc  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  docker-compose.dev.yaml  docker-compose.infra.yaml  docker-compose.yaml  pyproject.toml
.githooks/: commit-msg  pre-push
app/: app.py  config.py  init_database.py  main.py
app/agent/: _tagging.py  analysis_agent.py  analysis_agent_alvin.py  evidence_web_search_agent.py  jargen_agent.py  pipeline_runner.py  pre_screen_agent.py  retrieval_agent.py  retriever_agent.py  review_agent.py  reviewer_agent.py  summariser_agent.py  summarizer_agent.py  web_search_agent.py
app/agent/schemas/: agents.py  analysis.py  evidence.py  jargons.py  pre_screen_result.py  reviews.py  schemas.py  stream.py
app/agents/: _tagging.py  analysis_agent.py  analysis_agent_alvin.py  classifier_agent.py  jargon_agent.py  report_generator_agent.py
app/api/: agent.py  fe.py  hitl.py  jargon.py  review.py
app/config/: logging.yaml
app/core/: config.py  dependencies.py  environment.py  logging.py
app/database/: db.py  enums.py  models.py
app/repo/: fe_repo.py  jargon_repo.py  review_repo.py
app/schemas/: agent.py  analysis.py  users.py
app/services/: agent_service.py  auth_service.py
frontend/compliance-dashboard/: package-lock.json  package.json
frontend/compliance-dashboard/app/: globals.css  layout.tsx  page.tsx
scripts/: start.ps1  start.sh  start_docker.ps1  start_docker.sh  start_docker_prod.sh
(+5 files in other folders)
